test/pass/lambdas/lambda_multiline_block.lily
var v = (|a: Integer|
    var is_ten = false
    if a == 10: {
        is_ten = true
    }
    is_ten
)
