test/fail/basic_syntax/integer_construct.lily
#[
SyntaxError: Class Integer does not have a constructor.
    from integer_construct.lily:6:
]#

var v = Integer(10)
